# numeric

./: Cargo.toml  README.md
.github/workflows/: codecoverage.yaml
examples/: interp.rs  interp1d.rs  interp2d.rs  sample.rs  spline1d.rs
src/: lib.rs  macros.rs
src/interp/: barycentric_1d.rs  linear.rs  mod.rs  poly_1d.rs  poly_coeff.rs  spline1d.rs
src/interp/interp1d/: barycentric_1d.rs  mod.rs  poly_1d.rs  rational_1d.rs  spline1d.rs
src/interp/interp2d/: bicubic.rs  bicubic_spline.rs  bilinear.rs  mod.rs  poly2d.rs  rbf.rs  shep.rs
src/linalg/: banddiagonal.rs  cholesky.rs  gauss_jordan.rs  lingcd.rs  lu_decomposition.rs  mod.rs  qrdcmp.rs  sparse.rs  svd.rs  toeplz.rs  tridiagonal.rs  vander.rs
