[package]
name = "numerics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
anyhow = "1.0.44"
thiserror = "1.0.30"
csv = "1.1.6"
clap = "3.1.3"

[[example]]
name = "interp2d"
path = "examples/interp2d.rs"

[[example]]
name = "interp1d"
path = "examples/interp1d.rs"